hphp/hack/test/typecheck/class_refinements/box+ctx_exact.php.exp
File "box+ctx_exact.php", line 15, characters 16-45:
Type refinements cannot appear on the right-hand side of a type alias. (NastCheck[3101])
File "box+ctx_exact.php", line 27, characters 7-9:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "box+ctx_exact.php", line 26, characters 37-38:
  From this declaration, the context of this function body provides the capability set {}
  File "box+ctx_exact.php", line 12, characters 33-33:
  But the function being called requires the capability <expr#2>::C
File "box+ctx_exact.php", line 54, characters 17-19:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "box+ctx_exact.php", line 50, characters 2-3:
  From this declaration, the context of this function body provides the capability set {}
  File "box+ctx_exact.php", line 12, characters 33-33:
  But the function being called requires the capability <expr#5>::C
File "box+ctx_exact.php", line 55, characters 22-24:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "box+ctx_exact.php", line 50, characters 2-3:
  From this declaration, the context of this function body provides the capability set {}
  File "box+ctx_exact.php", line 12, characters 33-33:
  But the function being called requires the capability <expr#2>::C
